# ed_visit_analytics_service

./: .dockerignore  .env.docker  .env.example  .gitignore  AI_USAGE.md  DECISIONS.md  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 20261003_01_initial.py  20261003_02_canonical_source_arrival_and_idempotency_scope.py
app/: main.py
app/api/: analytics.py  idempotency.py  records.py  routes.py
app/core/: config.py  logging.py
app/db/: __init__.py  alembic_config.py  models.py  session.py
app/domain/: analytics.py  conflicts.py  enums.py  errors.py  idempotency.py  records.py
app/repositories/: analytics_repository.py  idempotency_repository.py  ingestion_repository.py
app/services/: analytics_service.py  hashing.py  idempotency_service.py  ingestion_service.py  record_merger.py  sanitization.py  stage_latency.py  visit_reconstruction.py
sample_data/: batch_payload.json
tests/: conftest.py  helpers.py
tests/integration/: test_analytics_api.py  test_chief_complaint_merge.py  test_idempotency.py  test_ingestion_api.py  test_merge_conflicts.py  test_out_of_order_corrections.py
tests/unit/: test_alembic_env_resolution.py  test_alembic_schema.py  test_analytics_service.py  test_domain_validation.py  test_hashing.py  test_local_debug_defaults.py  test_logging_formatter.py  test_merge.py  test_record_merger_conflicts.py  test_repository_filters.py  test_security.py
