[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ed-visit-analytics-service"
version = "0.1.1"
description = "Privacy-aware ED event ingestion with lightweight analytics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Federico Damian" }
]
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "SQLAlchemy==2.0.35",
  "psycopg[binary]==3.2.13",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "httpx==0.27.2",
  "alembic==1.13.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "ruff==0.6.9",
]

[project.scripts]
ed-visit-analytics = "run_local:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "sample_data*", "alembic*"]

[tool.pytest.ini_options]
markers = [
  "unit: fast isolated unit tests",
  "integration: tests using API or database interactions"
]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
